--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,19 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+
+# Ignore directories
+.idea/
+LLM/Scripts/
+LLM/etc/
+LLM/include/
+LLM/share/
+
+# Specific files (if needed)
+# Example: ignore all `.exe` files in LLM/Scripts/
+LLM/Scripts/*.exe
+
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
